--- a/.github/workflows/Sherlock.yml
+++ b/.github/workflows/Sherlock.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Aira"
+          find: "Andrea"
           replace: "Sherlock"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
